Update board configuration to set up USART6 for MIDI.

--- a/nucleo-f767zi-uart.ioc
+++ b/nucleo-f767zi-uart.ioc
@@ -17,8 +17,9 @@ Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
 Mcu.IP5=USART3
-Mcu.IP6=USB_OTG_FS
-Mcu.IPNb=7
+Mcu.IP6=USART6
+Mcu.IP7=USB_OTG_FS
+Mcu.IPNb=8
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -39,19 +40,21 @@ Mcu.Pin21=PA11
 Mcu.Pin22=PA12
 Mcu.Pin23=PA13
 Mcu.Pin24=PA14
-Mcu.Pin25=PG11
-Mcu.Pin26=PG13
-Mcu.Pin27=PB3
-Mcu.Pin28=PB7
-Mcu.Pin29=VP_SYS_VS_Systick
+Mcu.Pin25=PG9
+Mcu.Pin26=PG11
+Mcu.Pin27=PG13
+Mcu.Pin28=PG14
+Mcu.Pin29=PB3
 Mcu.Pin3=PH0/OSC_IN
+Mcu.Pin30=PB7
+Mcu.Pin31=VP_SYS_VS_Systick
 Mcu.Pin4=PH1/OSC_OUT
 Mcu.Pin5=PC1
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA7
 Mcu.Pin9=PC4
-Mcu.PinsNb=30
+Mcu.PinsNb=32
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -183,6 +186,9 @@ PG13.GPIO_Label=RMII_TXD0 [LAN8742A-CZ-TR_TXD0]
 PG13.Locked=true
 PG13.Mode=RMII
 PG13.Signal=ETH_TXD0
+PG14.Locked=true
+PG14.Mode=Asynchronous
+PG14.Signal=USART6_TX
 PG6.GPIOParameters=GPIO_Label
 PG6.GPIO_Label=USB_PowerSwitchOn [STMPS2151STR_EN]
 PG6.Locked=true
@@ -191,6 +197,9 @@ PG7.GPIOParameters=GPIO_Label
 PG7.GPIO_Label=USB_OverCurrent [STMPS2151STR_FAULT]
 PG7.Locked=true
 PG7.Signal=GPIO_Input
+PG9.Locked=true
+PG9.Mode=Asynchronous
+PG9.Signal=USART6_RX
 PH0/OSC_IN.GPIOParameters=GPIO_Label
 PH0/OSC_IN.GPIO_Label=MCO [STM32F103CBT6_PA8]
 PH0/OSC_IN.Locked=true
@@ -321,6 +330,9 @@ SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
+USART6.BaudRate=31250
+USART6.IPParameters=VirtualMode-Asynchronous,BaudRate
+USART6.VirtualMode-Asynchronous=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_SYS_VS_Systick.Mode=SysTick
