--- a/nucleo-f767zi-uart.ioc
+++ b/nucleo-f767zi-uart.ioc
@@ -239,7 +239,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,6-MX_USART6_UART_Init-USART6-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -328,10 +328,12 @@ RCC.VcooutputI2S=48000000
 RCC.WatchDogFreq_Value=32000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-USART3.IPParameters=VirtualMode-Asynchronous
+USART3.IPParameters=VirtualMode-Asynchronous,OverrunDisableParam
+USART3.OverrunDisableParam=ADVFEATURE_OVERRUN_DISABLE
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USART6.BaudRate=31250
-USART6.IPParameters=VirtualMode-Asynchronous,BaudRate
+USART6.IPParameters=VirtualMode-Asynchronous,BaudRate,OverrunDisableParam
+USART6.OverrunDisableParam=ADVFEATURE_OVERRUN_ENABLE
 USART6.VirtualMode-Asynchronous=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
