Increase speed of ST-Link serial port & also document ports/speeds.

--- a/nucleo-f767zi-uart.ioc
+++ b/nucleo-f767zi-uart.ioc
@@ -331,8 +331,9 @@ RCC.VcooutputI2S=48000000
 RCC.WatchDogFreq_Value=32000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+USART3.BaudRate=460800
 USART3.DataInvertParam=ADVFEATURE_DATAINV_DISABLE
-USART3.IPParameters=VirtualMode-Asynchronous,OverrunDisableParam,DataInvertParam
+USART3.IPParameters=VirtualMode-Asynchronous,OverrunDisableParam,DataInvertParam,BaudRate
 USART3.OverrunDisableParam=ADVFEATURE_OVERRUN_ENABLE
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USART6.BaudRate=31250
