--- a/nucleo-f767zi-uart.ioc
+++ b/nucleo-f767zi-uart.ioc
@@ -1,7 +1,12 @@
 #MicroXplorer Configuration settings - do not modify
-CAD.formats=
-CAD.pinconfig=
+CAD.formats=[]
+CAD.pinconfig=Dual
 CAD.provider=
+CORTEX_M7.CPU_DCache=Disabled
+CORTEX_M7.CPU_ICache=Disabled
+CORTEX_M7.IPParameters=CPU_ICache,CPU_DCache,PREFETCH_ENABLE,default_mode_Activation
+CORTEX_M7.PREFETCH_ENABLE=0
+CORTEX_M7.default_mode_Activation=0
 ETH.IPParameters=MediaInterface,PHY_Name,PHY_Value,PhyAddress
 ETH.MediaInterface=HAL_ETH_RMII_MODE
 ETH.PHY_Name=LAN8742A_PHY_ADDRESS
@@ -9,53 +14,77 @@ ETH.PHY_Value=0
 ETH.PhyAddress=0
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2S2.AudioFreq=I2S_AUDIOFREQ_32K
+I2S2.DataFormat=I2S_DATAFORMAT_16B_EXTENDED
+I2S2.ErrorAudioFreq=-0.26 %
+I2S2.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
+I2S2.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq,AudioFreq,DataFormat
+I2S2.Instance=SPI$Index
+I2S2.RealAudioFreq=31.914 KHz
+I2S2.VirtualMode=I2S_MODE_MASTER
+I2S3.AudioFreq=I2S_AUDIOFREQ_32K
+I2S3.DataFormat=I2S_DATAFORMAT_16B_EXTENDED
+I2S3.ErrorAudioFreq=-0.26 %
+I2S3.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
+I2S3.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq,DataFormat,AudioFreq
+I2S3.Instance=SPI$Index
+I2S3.RealAudioFreq=31.914 KHz
+I2S3.VirtualMode=I2S_MODE_MASTER
 KeepUserPlacement=false
 Mcu.CPN=STM32F767ZIT6
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=ETH
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=USART3
-Mcu.IP6=USART6
-Mcu.IP7=USB_OTG_FS
-Mcu.IPNb=8
+Mcu.IP2=I2S2
+Mcu.IP3=I2S3
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IP7=USART3
+Mcu.IP8=USART6
+Mcu.IP9=USB_OTG_FS
+Mcu.IPNb=10
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14/OSC32_IN
-Mcu.Pin10=PC5
-Mcu.Pin11=PB0
-Mcu.Pin12=PB13
-Mcu.Pin13=PB14
-Mcu.Pin14=PD8
-Mcu.Pin15=PD9
-Mcu.Pin16=PG6
-Mcu.Pin17=PG7
-Mcu.Pin18=PA8
-Mcu.Pin19=PA9
+Mcu.Pin10=PA7
+Mcu.Pin11=PC4
+Mcu.Pin12=PC5
+Mcu.Pin13=PB0
+Mcu.Pin14=PB2
+Mcu.Pin15=PB10
+Mcu.Pin16=PB12
+Mcu.Pin17=PB13
+Mcu.Pin18=PB14
+Mcu.Pin19=PD8
 Mcu.Pin2=PC15/OSC32_OUT
-Mcu.Pin20=PA10
-Mcu.Pin21=PA11
-Mcu.Pin22=PA12
-Mcu.Pin23=PA13
-Mcu.Pin24=PA14
-Mcu.Pin25=PG9
-Mcu.Pin26=PG11
-Mcu.Pin27=PG13
-Mcu.Pin28=PG14
-Mcu.Pin29=PB3
+Mcu.Pin20=PD9
+Mcu.Pin21=PG6
+Mcu.Pin22=PG7
+Mcu.Pin23=PA8
+Mcu.Pin24=PA9
+Mcu.Pin25=PA10
+Mcu.Pin26=PA11
+Mcu.Pin27=PA12
+Mcu.Pin28=PA13
+Mcu.Pin29=PA14
 Mcu.Pin3=PH0/OSC_IN
-Mcu.Pin30=PB7
-Mcu.Pin31=VP_SYS_VS_Systick
+Mcu.Pin30=PC10
+Mcu.Pin31=PG9
+Mcu.Pin32=PG11
+Mcu.Pin33=PG13
+Mcu.Pin34=PG14
+Mcu.Pin35=PB3
+Mcu.Pin36=PB7
+Mcu.Pin37=VP_SYS_VS_Systick
 Mcu.Pin4=PH1/OSC_OUT
 Mcu.Pin5=PC1
-Mcu.Pin6=PA1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA7
-Mcu.Pin9=PC4
-Mcu.PinsNb=32
+Mcu.Pin6=PC3
+Mcu.Pin7=PA1
+Mcu.Pin8=PA2
+Mcu.Pin9=PA4
+Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -108,6 +137,10 @@ PA2.GPIO_Label=RMII_MDIO [LAN8742A-CZ-TR_MDIO]
 PA2.Locked=true
 PA2.Mode=RMII
 PA2.Signal=ETH_MDIO
+PA4.GPIOParameters=GPIO_Speed
+PA4.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PA4.Mode=Half_Duplex_Master
+PA4.Signal=I2S3_WS
 PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=RMII_CRS_DV [LAN8742A-CZ-TR_CRS_DV]
 PA7.Locked=true
@@ -127,6 +160,10 @@ PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=LD1 [Green]
 PB0.Locked=true
 PB0.Signal=GPIO_Output
+PB10.Mode=Half_Duplex_Master
+PB10.Signal=I2S2_CK
+PB12.Mode=Half_Duplex_Master
+PB12.Signal=I2S2_WS
 PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=RMII_TXD1 [LAN8742A-CZ-TR_TXD1]
 PB13.Locked=true
@@ -136,6 +173,10 @@ PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=LD3 [Red]
 PB14.Locked=true
 PB14.Signal=GPIO_Output
+PB2.GPIOParameters=GPIO_Speed
+PB2.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PB2.Mode=Half_Duplex_Master
+PB2.Signal=I2S3_SD
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
@@ -149,6 +190,10 @@ PC1.GPIO_Label=RMII_MDC [LAN8742A-CZ-TR_MDC]
 PC1.Locked=true
 PC1.Mode=RMII
 PC1.Signal=ETH_MDC
+PC10.GPIOParameters=GPIO_Speed
+PC10.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PC10.Mode=Half_Duplex_Master
+PC10.Signal=I2S3_CK
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=USER_Btn [B1]
 PC13.Locked=true
@@ -159,6 +204,8 @@ PC14/OSC32_IN.Signal=RCC_OSC32_IN
 PC15/OSC32_OUT.Locked=true
 PC15/OSC32_OUT.Mode=LSE-External-Oscillator
 PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
+PC3.Mode=Half_Duplex_Master
+PC3.Signal=I2S2_SD
 PC4.GPIOParameters=GPIO_Label
 PC4.GPIO_Label=RMII_RXD0 [LAN8742A-CZ-TR_RXD0]
 PC4.Locked=true
@@ -242,7 +289,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,6-MX_USART6_UART_Init-USART6-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,6-MX_USART6_UART_Init-USART6-false-HAL-true,7-MX_I2S3_Init-I2S3-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
