--- a/nucleo-f767zi-uart.ioc
+++ b/nucleo-f767zi-uart.ioc
@@ -14,14 +14,6 @@ ETH.PHY_Value=0
 ETH.PhyAddress=0
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2S2.AudioFreq=I2S_AUDIOFREQ_32K
-I2S2.DataFormat=I2S_DATAFORMAT_16B_EXTENDED
-I2S2.ErrorAudioFreq=-0.26 %
-I2S2.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
-I2S2.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq,AudioFreq,DataFormat
-I2S2.Instance=SPI$Index
-I2S2.RealAudioFreq=31.914 KHz
-I2S2.VirtualMode=I2S_MODE_MASTER
 I2S3.AudioFreq=I2S_AUDIOFREQ_32K
 I2S3.DataFormat=I2S_DATAFORMAT_16B_EXTENDED
 I2S3.ErrorAudioFreq=-0.26 %
@@ -35,56 +27,52 @@ Mcu.CPN=STM32F767ZIT6
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=ETH
-Mcu.IP2=I2S2
-Mcu.IP3=I2S3
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IP7=USART3
-Mcu.IP8=USART6
-Mcu.IP9=USB_OTG_FS
-Mcu.IPNb=10
+Mcu.IP2=I2S3
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=USART3
+Mcu.IP7=USART6
+Mcu.IP8=USB_OTG_FS
+Mcu.IPNb=9
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14/OSC32_IN
-Mcu.Pin10=PA7
-Mcu.Pin11=PC4
-Mcu.Pin12=PC5
-Mcu.Pin13=PB0
-Mcu.Pin14=PB2
-Mcu.Pin15=PB10
-Mcu.Pin16=PB12
-Mcu.Pin17=PB13
-Mcu.Pin18=PB14
-Mcu.Pin19=PD8
+Mcu.Pin10=PC4
+Mcu.Pin11=PC5
+Mcu.Pin12=PB0
+Mcu.Pin13=PB2
+Mcu.Pin14=PB13
+Mcu.Pin15=PB14
+Mcu.Pin16=PD8
+Mcu.Pin17=PD9
+Mcu.Pin18=PG6
+Mcu.Pin19=PG7
 Mcu.Pin2=PC15/OSC32_OUT
-Mcu.Pin20=PD9
-Mcu.Pin21=PG6
-Mcu.Pin22=PG7
-Mcu.Pin23=PA8
-Mcu.Pin24=PA9
-Mcu.Pin25=PA10
-Mcu.Pin26=PA11
-Mcu.Pin27=PA12
-Mcu.Pin28=PA13
-Mcu.Pin29=PA14
+Mcu.Pin20=PA8
+Mcu.Pin21=PA9
+Mcu.Pin22=PA10
+Mcu.Pin23=PA11
+Mcu.Pin24=PA12
+Mcu.Pin25=PA13
+Mcu.Pin26=PA14
+Mcu.Pin27=PC10
+Mcu.Pin28=PG9
+Mcu.Pin29=PG11
 Mcu.Pin3=PH0/OSC_IN
-Mcu.Pin30=PC10
-Mcu.Pin31=PG9
-Mcu.Pin32=PG11
-Mcu.Pin33=PG13
-Mcu.Pin34=PG14
-Mcu.Pin35=PB3
-Mcu.Pin36=PB7
-Mcu.Pin37=VP_SYS_VS_Systick
+Mcu.Pin30=PG13
+Mcu.Pin31=PG14
+Mcu.Pin32=PB3
+Mcu.Pin33=PB7
+Mcu.Pin34=VP_SYS_VS_Systick
 Mcu.Pin4=PH1/OSC_OUT
 Mcu.Pin5=PC1
-Mcu.Pin6=PC3
-Mcu.Pin7=PA1
-Mcu.Pin8=PA2
-Mcu.Pin9=PA4
-Mcu.PinsNb=38
+Mcu.Pin6=PA1
+Mcu.Pin7=PA2
+Mcu.Pin8=PA4
+Mcu.Pin9=PA7
+Mcu.PinsNb=35
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -160,10 +148,6 @@ PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=LD1 [Green]
 PB0.Locked=true
 PB0.Signal=GPIO_Output
-PB10.Mode=Half_Duplex_Master
-PB10.Signal=I2S2_CK
-PB12.Mode=Half_Duplex_Master
-PB12.Signal=I2S2_WS
 PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=RMII_TXD1 [LAN8742A-CZ-TR_TXD1]
 PB13.Locked=true
@@ -204,8 +188,6 @@ PC14/OSC32_IN.Signal=RCC_OSC32_IN
 PC15/OSC32_OUT.Locked=true
 PC15/OSC32_OUT.Mode=LSE-External-Oscillator
 PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
-PC3.Mode=Half_Duplex_Master
-PC3.Signal=I2S2_SD
 PC4.GPIOParameters=GPIO_Label
 PC4.GPIO_Label=RMII_RXD0 [LAN8742A-CZ-TR_RXD0]
 PC4.Locked=true
@@ -289,7 +271,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,6-MX_USART6_UART_Init-USART6-false-HAL-true,7-MX_I2S3_Init-I2S3-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,6-MX_USART6_UART_Init-USART6-false-HAL-true,7-MX_I2S3_Init-I2S3-false-HAL-true,8-MX_I2S2_Init-I2S2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
