--- a/nucleo-f767zi-uart.ioc
+++ b/nucleo-f767zi-uart.ioc
@@ -7,6 +7,18 @@ CORTEX_M7.CPU_ICache=Disabled
 CORTEX_M7.IPParameters=CPU_ICache,CPU_DCache,PREFETCH_ENABLE,default_mode_Activation
 CORTEX_M7.PREFETCH_ENABLE=0
 CORTEX_M7.default_mode_Activation=0
+Dma.Request0=SPI3_TX
+Dma.RequestsNb=1
+Dma.SPI3_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI3_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI3_TX.0.Instance=DMA1_Stream5
+Dma.SPI3_TX.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI3_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.SPI3_TX.0.Mode=DMA_CIRCULAR
+Dma.SPI3_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI3_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI3_TX.0.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.SPI3_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 ETH.IPParameters=MediaInterface,PHY_Name,PHY_Value,PhyAddress
 ETH.MediaInterface=HAL_ETH_RMII_MODE
 ETH.PHY_Name=LAN8742A_PHY_ADDRESS
@@ -26,15 +38,16 @@ KeepUserPlacement=false
 Mcu.CPN=STM32F767ZIT6
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
-Mcu.IP1=ETH
-Mcu.IP2=I2S3
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=USART3
-Mcu.IP7=USART6
-Mcu.IP8=USB_OTG_FS
-Mcu.IPNb=9
+Mcu.IP1=DMA
+Mcu.IP2=ETH
+Mcu.IP3=I2S3
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IP7=USART3
+Mcu.IP8=USART6
+Mcu.IP9=USB_OTG_FS
+Mcu.IPNb=10
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -79,6 +92,7 @@ Mcu.UserName=STM32F767ZITx
 MxCube.Version=6.12.0
 MxDb.Version=DB.6.0.120
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.DMA1_Stream5_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -271,7 +285,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,6-MX_USART6_UART_Init-USART6-false-HAL-true,7-MX_I2S3_Init-I2S3-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,7-MX_USART6_UART_Init-USART6-false-HAL-true,8-MX_I2S3_Init-I2S3-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
